.k8s/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2020-04-29T14:54:46Z"
  labels:
    app: ratings
    app.kubernetes.io/component: ratings
    app.kubernetes.io/instance: ratings
  name: ratings
  namespace: bookinfo
  resourceVersion: "404950675"
  selfLink: /api/v1/namespaces/bookinfo/services/ratings
  uid: 5dd43679-8a29-11ea-a5ee-02fdb1202f5a
spec:
  clusterIP: 127.0.0.1
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: ratings
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
